# src/routes/controlPlane.js
@@ -1,0 +1,45 @@
+/*
+ *  *******************************************************************************
+ *  * Copyright (c) 2023 Datasance Teknoloji A.S.
+ *  *
+ *  * This program and the accompanying materials are made available under the
+ *  * terms of the Eclipse Public License v. 2.0 which is available at
+ *  * http://www.eclipse.org/legal/epl-2.0
+ *  *
+ *  * SPDX-License-Identifier: EPL-2.0
+ *  *******************************************************************************
+ *
+ */
+const constants = require('../helpers/constants')
+const ControlPlaneController = require('../controllers/control-plane-controller')
+const ResponseDecorator = require('../decorators/response-decorator')
+const Errors = require('../helpers/errors')
+const logger = require('../logger')
+
+module.exports = [
+  {
+    method: 'get',
+    path: '/api/v1/controlplane/profile',
+    middleware: async (req, res) => {
+      logger.apiReq(req)
+
+      const successCode = constants.HTTP_CODE_SUCCESS
+      const errorCodes = [
+        {
+          code: constants.HTTP_CODE_UNAUTHORIZED,
+          errors: [Errors.AuthenticationError]
+        }
+      ]
+
+      const getControlPlaneProfileEndPoint = ResponseDecorator.handleErrors(ControlPlaneController.getControlPlaneProfileEndPoint, successCode, errorCodes)
+      const responseObject = await getControlPlaneProfileEndPoint(req)
+
+      res
+        .status(responseObject.code)
+        .send(responseObject.body)
+
+      logger.apiRes({ req: req, res: responseObject })
+    }
+  }
+
+]
